--- a/src/app/Components/sidebar/sidebar.component.html
+++ b/src/app/Components/sidebar/sidebar.component.html
@@ -1,17 +1,17 @@
-<div class="container-fluid"> 
+<div class="container-fluid">
     <div class="row flex-nowrap ">
          <div class="col-auto col-md-3 col-xl-10 px-sm-2 px-0  bg-dark">
 
          <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white">
              <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                 <span class="fs-5 d-none d-sm-inline">Menu</span> 
+                 <span class="fs-5 d-none d-sm-inline">Menu</span>
                 </a> <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
-                     
+
                     <li class="nav-item">
                          <a href="#" class="nav-link align-middle px-0">
                          <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
                 </a>
-                </li>  
+                </li>
                 <li class="nav-item">
                     <a [routerLink]="['/groups']" class="nav-link align-middle px-0 text-light">
                         <div class="d-flex justify-content-around">
@@ -41,12 +41,12 @@
                 </li>
                 <li class="nav-item">
                     <a [routerLink]="['/courses']" class="nav-link align-middle px-0 text-light">
-    
+
                         <div class="d-flex justify-content-around">
                             <i class=" fs-4 bi bi-plus-slash-minus ms-2"></i>
                             <span class="ms-2 d-none d-sm-inline fs-5 ">الكورسات</span>
                         </div>
-                            
+
                     </a>
                 </li>
                 <li class="nav-item">
@@ -58,52 +58,56 @@
                     </a>
                 </li>
                 <li class="nav-item">
-    
+
                     <a [routerLink]="['/students']" class="nav-link align-middle px-0 text-light">
-    
+
                         <div class="d-flex justify-content-around">
                             <i class=" fs-4 bi bi-person ms-2"></i>
                             <span class="ms-2 d-none d-sm-inline fs-5 ">الطلاب</span>
                         </div>
-                
+
                     </a>
                 </li>
                 <li class="nav-item">
-    
                     <a [routerLink]="['/payments']" class="nav-link align-middle px-0 text-light">
-    
                         <div class="d-flex justify-content-around">
                             <i class=" fs-4 bi bi-person ms-2"></i>
                             <span class="ms-2 d-none d-sm-inline fs-5 ">المدفوعات</span>
                         </div>
-                
                     </a>
                 </li>
-                 
-                
+                <li class="nav-item">
+                  <a [routerLink]="['studentcourse']" class="nav-link align-middle px-0 text-light">
+                      <div class="d-flex justify-content-around">
+                          <i class=" fs-4 bi bi-person ms-2"></i>
+                          <span class="ms-2 d-none d-sm-inline fs-5 ">اضافه كورس للطالب</span>
+                      </div>
+                  </a>
+              </li>
+
+
                 <!-- <li> <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
                      <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Products</span> </a>
                       <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
                                  <li class="w-100"> <a href="#" class="nav-link px-0">
                                      <span class="d-none d-sm-inline">Product</span> 1</a> </li> <li>
-                                     <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 2</a> </li> 
-                                     <li> <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 3</a> </li> 
+                                     <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 2</a> </li>
+                                     <li> <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 3</a> </li>
                                      <li> <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 4</a> </li>
-                                    </ul> 
-                                
+                                    </ul>
+
                                 </li>  -->
 
 
-                            </ul> 
+                            </ul>
                                      <hr> <div class="dropdown pb-4">
                                          <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                                              <img src="https://github.com/mdo.png" alt="hugenerd" width="30" height="30" class="rounded-circle"> <span class="d-none d-sm-inline mx-1">loser</span>
-                                             </a> <ul class="dropdown-menu dropdown-menu-dark text-small shadow"> <li><a class="dropdown-item" href="#">New project...</a></li> <li><a class="dropdown-item" href="#">Settings</a></li> <li><a class="dropdown-item" href="#">Profile</a></li> 
-                                        
+                                             </a> <ul class="dropdown-menu dropdown-menu-dark text-small shadow"> <li><a class="dropdown-item" href="#">New project...</a></li> <li><a class="dropdown-item" href="#">Settings</a></li> <li><a class="dropdown-item" href="#">Profile</a></li>
+
 <li> <hr class="dropdown-divider"> </li> <li><a class="dropdown-item" href="#">Sign out</a></li> </ul> </div> </div> </div>
- <!-- <div class="col py-3"> 
-    Content area... 
+ <!-- <div class="col py-3">
+    Content area...
 </div> -->
  </div>
 </div>
-  
