--- a/src/app/Components/sidebar/sidebar.component.css
+++ b/src/app/Components/sidebar/sidebar.component.css
@@ -1,4 +1,14 @@
-
+.test{
+    height: 100%; 
+    width: 280px; 
+    position: fixed; 
+    z-index: 1;
+    top: 0; 
+    right: 0;
+    background-color: #111; 
+    overflow-x: hidden; 
+    padding-top: 20p
+}
 
 
 
