--- a/src/app/Components/subjects/subjects.component.html
+++ b/src/app/Components/subjects/subjects.component.html
@@ -9,7 +9,7 @@
                         </div>
                         <div class="card-body text-right">
                             <form [formGroup]="subjectForm" (submit)="formHandler($event)">
-                              
+
                                 <div class="mb-3">
                                   <label for="subjectName" class="form-label">إسم المادة</label>
                                   <input type="text"
@@ -31,33 +31,33 @@
 
                                   <div class="mb-3">
                                     <label for="subjectCourse" class="form-label">الاسم الكورسم المحتوي له</label>
-                                    <select *ngFor="let course of Allcourses let i=index" id="subjectCourse" class="form-select"
+                                    <select id="subjectCourse" class="form-select"
                                     formControlName="subjectCourse"
-                                    (change)="loadSubjects()">  
-                                    <option value="{{course.courseId}}">{{course.courseName}}</option>
-                                      
+                                    (change)="loadSubjects()">
+                                    <option *ngFor="let course of Allcourses let i=index" value="{{course.courseId}}">{{course.courseName}}</option>
+
                                     </select>
 
                                     <ng-container *ngIf="getSubjectName.touched" >
                                       <div *ngIf="getSubjectCourse.hasError('required')" id="subjectName" class="form-text text-danger  w-75">
-                                        من فضلك ادخل  الكورس التابعه له المادة                                   
+                                        من فضلك ادخل  الكورس التابعه له المادة
                                       </div>
                                   </ng-container>
                                   </div>
                                   <button class="btn btn-primary ms-2" (click)="back()" >تراجع</button>
                                   <button *ngIf="!isEdit" class="btn btn-danger ms-2" (click)="AddSubject()">اضافة</button>
                                   <button *ngIf="isEdit" class="btn btn-danger ms-2" (click)="saveUpdate()">حفظ</button>
-                  
+
                               </form>
                         </div>
                     </div>
                 </div>
-               
+
             </div>
         </div>
-      </div> 
+      </div>
 </div>
-
+<!---
 <div class="main-content mt-3">
   <div class="container-fluid">
       <div class="row">
@@ -108,5 +108,67 @@
                 </div>
               </div>
           </div>
+    </div>-->
+    <p>
+      <button
+        class="btn btn-primary"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#collapseExample"
+        aria-expanded="false"
+        aria-controls="collapseExample"
+      >
+      عرض المواد المسجلة
+          </button>
+    </p>
+    <div class="collapse" id="collapseExample">
+      <div class="card card-body">
+        <div class="main-content mt-3">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="card-body">
+                  <div class="table-responsive">
+                      <table class="table text-center">
+                          <thead class=" text-primary">
+                            <th>اسم المادة</th>
+                            <th>اسم الكورس التابعة له</th>
+                            <th> تعديل</th>
+                            <th> حذف</th>
+                          </thead>
+                          <tbody>
+                            <tr *ngFor="let subject of subjctByCrsId;let course; let i = index">
+                              <td>{{ subject.subjectName }}</td>
+                              <td>{{subject.courseId}}</td>
+                              <td>
+                                <button
+                                  mat-raised-button
+                                  type="submit"
+                                  class="btn btn-danger"
+                                  (click)="EditSubject(subject.subjectId)"
+                                >
+                                  تعديل
+                                </button>
+                              </td>
+                              <td>
+                                <button
+                                  mat-raised-button
+                                  type="submit"
+                                  (click)="DeleteSubject(subject.subjectId)"
+                                  class="btn btn-danger"
+                                >
+                                  حذف
+                                </button>
+                              </td>
+                              </tr>
+                          </tbody>
+                       </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
+
